<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_tensorrt_bevformer</name>
  <version>0.1.0</version>
  <description>TensorRT implementation of BEVFormer for Autoware</description>

  <maintainer email="selventhiran@multicorewareinc.com">Selventhiran Rengaraj</maintainer>
  <maintainer email="ramaseshan.subramanian@multicorewareinc.com">Ramaseshan Subramanian</maintainer>
  <maintainer email="naveen.sathiyaseelan@multicorewareinc.com">Naveen Sathiyaseelan</maintainer>
  <maintainer email="dhinesh.panneerselvam@multicorewareinc.com">Dhinesh Panneerselvam</maintainer>
  <maintainer email="rahul.sundar@multicorewareinc.com">Rahul Gandhi Sundar</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>autoware_cuda_dependency_meta</depend>
  <depend>autoware_localization_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
