<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_tensorrt_plugins</name>
  <version>0.46.0</version>
  <description>The autoware_tensorrt_plugins package</description>
  <maintainer email="kenzo.lobos@tier4.jp">Kenzo Lobos-Tsunekawa</maintainer>
  <maintainer email="amadeusz.szymko.2@tier4.jp">Amadeusz Szymko</maintainer>
  <maintainer email="kotaro.uetake@tier4.jp">Kotaro Uetake</maintainer>
  <maintainer email="masato.saeki@tier4.jp">Masato Saeki</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <buildtool_depend>tensorrt_cmake_module</buildtool_depend>

  <buildtool_export_depend>tensorrt_cmake_module</buildtool_export_depend>

  <depend>autoware_cuda_dependency_meta</depend>
  <depend>autoware_cuda_utils</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
